smartif no longer exists

--- a/staticblocks/templates/staticblock/widgets/block.html
+++ b/staticblocks/templates/staticblock/widgets/block.html
@@ -1,4 +1,4 @@
-{% load static_block smartif %}
+{% load static_block %}
 {% get_static_block for blockname as block_object %}
 
 {% with block_object.content as staticblock %}
